# drive-planner

./: .gitignore  README.md  app.py  geocode.py  gpx.py  main.py  maps_link.py  output.py  pyproject.toml  route.py
docs/superpowers/plans/: 2026-07-14-shareable-driving-routes.md  2026-07-15-streamlit-route-app.md
docs/superpowers/specs/: 2026-07-14-shareable-driving-routes-design.md  2026-07-15-streamlit-route-app-design.md
resources/routes/: beziers.json.example  beziers_1.json
tests/: test_geocode.py  test_gpx.py  test_main.py  test_maps_link.py  test_output.py  test_route.py
